test/domains/compilerErrors/constDomain1.chpl
const d: domain(int);
d.add(5);
