test/domains/compilerErrors/constDomain1.good
constDomain1.chpl:2: error: const actual is passed to 'ref' formal 'this' of add()
note: to formal of type DefaultAssociativeDom(int(64),true)
